# teccod

./: .dockerignore  .env.example  .pylintrc  DZ.md  Dockerfile  README.md  docker-compose.yml  init.sh  main.py  pyproject.toml  runserver.py
app/: app.py  index.html  main.py
app/api/v1/: base_router.py  item.py  search.py
app/core/: config.py
app/crud/: base.py  item.py  search.py
app/db/: opensearch_client.py
app/dependencies/: get_db.py
app/schemas/: base.py  item.py  search.py
app/services/: item.py  search.py
app/templates/: index.html  index2.html
app/utils/: init_opensearch.py  load_data.py
